<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tmaat.dtara.onlinemovingestimator.ImageConfirm">

    <ListView
        android:id="@+id/listFurn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/finish"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/retake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onRetake"
        android:text="@string/retake" />

    <Button
        android:id="@+id/takeAnother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listFurn"
        android:layout_centerHorizontal="true"
        android:onClick="onTakeAnother"
        android:text="@string/takeAnother" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Finish" />
</RelativeLayout>
