<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/furnConfirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tmaat.dtara.onlinemovingestimator.FurnConfirm">

    <ListView
        android:id="@+id/listFurn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/save"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onDeleteImg"
        android:text="@string/deleteImg" />

    <Button
        android:id="@+id/addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onAddItem"
        android:text="@string/addItem" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onSave"
        android:text="@string/save" />

</RelativeLayout>
