<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tmaat.dtara.onlinemovingestimator.Intro">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:fontFamily="Calibri"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/about"
        android:textSize="26sp" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:onClick="onContinue"
        android:paddingLeft="12dp"
        android:paddingRight="8dp"
        android:text="@string/takeImage" />
</RelativeLayout>
