<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPressedHighlight">

    <RadioButton
        android:text="@string/bedroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="112dp"
        android:id="@+id/Bedroom"
        android:textSize="30sp" />

    <RadioButton
        android:text="@string/bathroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:id="@+id/Bathroom"
        android:layout_below="@+id/Livingroom"
        android:layout_alignStart="@+id/Livingroom"
        android:textSize="30sp" />

    <RadioButton
        android:text="@string/livingroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/Livingroom"
        android:layout_below="@+id/Kitchen"
        android:layout_alignStart="@+id/Kitchen"
        android:textSize="30sp" />

    <RadioButton
        android:text="@string/kitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:id="@+id/Kitchen"
        android:layout_alignStart="@+id/Bedroom"
        android:layout_alignEnd="@+id/Bedroom"
        android:layout_below="@+id/Bedroom"
        android:textSize="30sp" />
</RelativeLayout>